--- a/package.json
+++ b/package.json
@@ -5,22 +5,27 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./server.js",
-    "start:dev": "nodemon ./server.js",
-    "lint": "eslint ."
+    "start-dev": "nodemon ./server.js",
+    "lint": "eslint ./",
+    "lint-fix": "eslint ./ --fix"
   },
   "keywords": [
     "api",
-    "express-api"
+    "express-api",
+    "bookshelf",
+    "bookshelf-api"
   ],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nanoid": "^3.3.4"
   },
   "devDependencies": {
     "eslint": "^8.32.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-xo": "^0.43.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
   }
